--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body{
-  height: 100px;
+  padding: 0;
+  margin: 0;
+  
 }
 #menu__toggle {
     opacity: 0;
@@ -17,10 +19,11 @@ body{
   }
   #menu__toggle:checked ~ .menu__box {
     right: 0 !important;
-    margin-right: 90px;
+    margin-right: 108px;
+    position: absolute;
   }
   .menu__btn {
-    position: fixed;
+    position: absolute;
     top: 77px;
     right: 100px;
     width: 26px;
@@ -52,7 +55,7 @@ body{
     display: block;
     position: fixed;
     text-align: center;
-    top: 45;
+    top: 85px;
     right: -100%;
     margin: 0;
     padding: 20px 14px;
@@ -63,7 +66,7 @@ body{
   }
   .menu__item {
     display: block;
-    padding: 12px 24px;
+    padding: 8px 22px;
     color: #73574B;
     text-decoration: none;
  
@@ -74,11 +77,14 @@ body{
   
   
   .menu-spacing{
-    margin-left: 5px;
+    margin-left: 10px;
+    display: flex;
+    align-items: center;
+    font-family: sans-serif;
+    font-weight: bold;
   }
 
   input[type=text] {
-    margin-top: 45px;
     border: 1px solid #646E82;
     border-color: #646E82;
     color: rgba(115, 87, 75, 1);
@@ -115,6 +121,12 @@ body{
     font-size: 20px;
     line-height: 27px;
     animation: slide-up .25s;
+  }
+
+  .flexItems{
+    display: flex;
+    justify-content: space-between; 
+    align-items: center;
   }
 
 
@@ -191,30 +203,33 @@ body{
   }
 
   #text{
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  font-size: 50px;
-  color: white;
-  transform: translate(-50%,-50%);
-  -ms-transform: translate(-50%,-50%);
-  font-family: 'Open Sans';
-  font-style: normal;
-  color: rgba(115, 87, 75, 0.8);
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 42px;
-  background-color: #ffff;
-  text-align: center;
-  padding: 48px ;
-  border-radius: 76px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 32px;
-  width: 60%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    color: white;
+    transform: translate(-50%,-50%);
+    -ms-transform: translate(-50%,-50%);
+    font-family: 'Open Sans';
+    font-style: normal;
+    color: rgba(115, 87, 75, 0.8);
+    font-weight: 600;
+    font-size: 24px;
+    line-height: 42px;
+    background-color: #ffff;
+    text-align: center;
+    padding: 48px ;
+    border-radius: 76px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 32px;
+    width: 60%;
 
-}
+  }
+
+
+
 
 
 .resp{
@@ -227,18 +242,16 @@ body{
     font-size: 1rem;
   }
 .top-nav{
+    display: flex;
     flex-direction: column;
-    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
     
   }
 #elipse{
     display: none;
   }
-.menu__btn{ 
-    position: absolute;
-    top:340px;
-    right:49%;
-  }
+
   .menu__btn > span,
   .menu__btn > span::before,
   .menu__btn > span::after{
@@ -247,6 +260,7 @@ body{
 
 .score{
     flex-direction: column;
+
     flex-wrap: wrap;
     margin-top: 10px;
     min-width: 70px;
@@ -258,4 +272,26 @@ body{
     margin-top: 15px;
   }
   
+}
+
+
+
+
+input[type="radio"] {
+  display: none;
+}      
+
+#choiceBoxes label {
+  display: inline-block;
+  max-width: max-content;
+  padding: 4px 11px;
+  font-family: sans-serif;
+  font-size: 18px;
+  cursor: pointer;
+  border-radius: 27px;
+  border: 1px solid black;
+}      
+input[type="radio"]:checked+label {
+  background-color:#AC8A45;
+  color: #FFF8E9;
 }
