--- a/style.css
+++ b/style.css
@@ -248,7 +248,6 @@ body{
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    
   }
 #elipse{
     display: none;
@@ -261,11 +260,10 @@ body{
   }
 
 .score{
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin-top: 10px;
-    min-width: 70px;
-    gap: 15px;
+    
+    margin-top: 30px;
+    margin-bottom: 0 !important;
+    margin-left: -100px !important;
   }
 #menu__toggle:checked ~ .menu__box {
     right: 0 !important;
