--- a/style.css
+++ b/style.css
@@ -292,6 +292,12 @@ body{
     font-size: small !important;
     white-space: nowrap;
   }
+
+  #choiceBoxes{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
 
 
@@ -309,9 +315,16 @@ input[type="radio"] {
   font-size: 18px;
   cursor: pointer;
   border-radius: 27px;
-  border: 1px solid black;
+  margin: 5px;
+  border: 1px solid #AC8A45;
 }      
 input[type="radio"]:checked+label {
   background-color:#AC8A45;
   color: #FFF8E9;
+}
+
+#choiceBoxes label:hover{
+  background-color: #AC8A45;
+  color: white;
+  opacity: 70%;
 }
