--- a/style.css
+++ b/style.css
@@ -311,6 +311,7 @@ input[type="radio"] {
   display: inline-block;
   max-width: max-content;
   padding: 4px 11px;
+  min-width: 240px; ;
   font-family: sans-serif;
   font-size: 18px;
   cursor: pointer;
